Fixed issues in RT box and follow button
Fixed the illegible dark font on dark background on the RT box, and fixed the white on white Follow button.

--- a/snowflake minima dark.css
+++ b/snowflake minima dark.css
@@ -1,17 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic);
 
-/* Snowflake Minima Dark for TweetDeck.
-Snowflake Minima is a TweetDeck CSS modification that's designed to look the most minimalistic possible.
-It is based upon Snowflake Classic Dark by Diamant and implements some features of pixeldesu's Modern TweetDeck modification.
-You must use it with TweetDeck Dark Theme, and it is better used with Eramdam's Better TweetDeck Chrome extension.
-However, if you are to use it with Better TweetDeck, you must firstly disable the "Minimal" mode as it will conflict with the theme and look not so good.
-The creators of the themes used are Diamant (@diamantlefou), Berter (@BerterTheBoss) and pixeldesu (@pixeldesu) and was recompiled in a more fitting theme by me, Scimitar (@AlmtyCwrd)
-*/
-
 /* Scrollbar Changes */
 
 .scroll-styled-v::-webkit-scrollbar-thumb, .scroll-styled-h::-webkit-scrollbar-thumb {
 	border-radius: 0px;
+    background: ;
 }
 
 /* Applying font */
@@ -49,6 +42,32 @@ body {
 	display: block;
 }
 
+/* Fixing RT blocks font color */
+
+.js-mdl-header, .mdl-header
+	  {
+		color: #ffffff;
+ 	  }
+
+#actions-modal > div > div.js-inreply.cmp-replyto.item-box.is-inverted-dark > div > header > a > div.nbfc > span
+	  {
+		color: #ffffff;
+  	  }
+#actions-modal > div > div.js-inreply.cmp-replyto.item-box.is-inverted-dark > div > div > p
+	  {
+		color: #ffffff;
+  	  }
+
+/* Fixing "Follow" Button color */
+
+body > div.js-modals-container > div > div > div > div > div > div.prf-actions > div.prf-meta.cf > div > div > button > div.action-text.follow-text > span
+	  {
+		color: #55acee;
+  	  }
+body > div.js-modals-container > div > div > div > div > div > div.prf-actions > div.prf-meta.cf > div > div > button > div.action-text.follow-text > i
+	  {
+		display: none;
+  	  }
 
 .application, .app-content, .app-columns-container
 	  {
@@ -536,7 +555,7 @@ body {
 	width: 94%;
 }
 
-/* Changing dogears behaviours for Fav/RT/FavRT; code by pixeldesu */
+/* New Favorite/Retweet/FavRT behaviours for dogears */
 
 .tweet-dogear {
 	display: block;
@@ -560,7 +579,7 @@ body {
 	box-shadow: 0px 0px 0px #71b332;
 }
 
-/* Changing link colours for Fav/RT/FavRT; code by pixeldesu */
+/* New Favorite/Retweet/FavRT behaviours for links */
 
 .is-retweet .tweet-text a {
 	color: #71b332;    
